aerolink-platform/k8s/baggage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baggage-service
  namespace: aerolink
  labels:
    app: baggage-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: baggage-service
  template:
    metadata:
      labels:
        app: baggage-service
    spec:
      containers:
      - name: baggage-service
        image: ghcr.io/savindufernando/enterprise-cloud-2-baggage_service:latest
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: baggage-service
  namespace: aerolink
spec:
  selector:
    app: baggage-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
      name: http
