aerolink-platform/k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: aerolink
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: ghcr.io/savindufernando/enterprise-cloud-2-notification_service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8006
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8006
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/live
            port: 8006
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: aerolink
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
      name: http
