aerolink-platform/k8s/passenger-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passenger-service
  namespace: aerolink
  labels:
    app: passenger-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passenger-service
  template:
    metadata:
      labels:
        app: passenger-service
    spec:
      containers:
      - name: passenger-service
        image: ghcr.io/savindufernando/enterprise-cloud-2-passenger_service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8003
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8003
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8003
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: passenger-service
  namespace: aerolink
spec:
  selector:
    app: passenger-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      name: http
