aerolink-platform/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: aerolink
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: ghcr.io/savindufernando/enterprise-cloud-2-payment_service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8005
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8005
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8005
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: aerolink
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
      name: http
